--- a/app/src/main/res/values/strings-feedback-disambiguation.xml
+++ b/app/src/main/res/values/strings-feedback-disambiguation.xml
@@ -17,7 +17,7 @@
 <resources>
 
     <string name="missingBrowserFeaturesTitleLong">Browser features are missing or frustrating</string>
-    <string name="missingBrowserFeaturesTitleShort">Browser feature issues</string>
+    <string name="missingBrowserFeaturesTitleShort">Browser Feature Issues</string>
     <string name="missingBrowserFeaturesSubtitle">Which browsing feature can we add or improve?</string>
     <string name="missingBrowserFeatureSubReasonNavigation">Navigating forward, backward, refreshing</string>
     <string name="missingBrowserFeatureSubReasonTabManagement">Creating and managing tabs</string>
@@ -28,11 +28,11 @@
     <string name="missingBrowserFeatureSubReasonOther">None of these</string>
 
     <string name="websiteNotLoadingTitleLong">Certainly websites don\'t load correctly</string>
-    <string name="websiteNotLoadingTitleShort">Website loading issues</string>
+    <string name="websiteNotLoadingTitleShort">Website Loading Issues</string>
     <string name="websiteNotLoadingSubtitle">Which website is broken?"</string>
 
     <string name="searchNotGoodEnoughTitleLong">DuckDuckGo search isn\'t good enough</string>
-    <string name="searchNotGoodEnoughTitleShort">DuckDuckGo search issues</string>
+    <string name="searchNotGoodEnoughTitleShort">DuckDuckGo Search Issues</string>
     <string name="searchNotGoodEnoughSubtitle">Which search feature can we add or improve?</string>
     <string name="searchNotGoodEnoughSubReasonTechnicalSearches">Programming/technical search</string>
     <string name="searchNotGoodEnoughSubReasonGoogleLayout">The layout should be more like Google</string>
@@ -42,7 +42,7 @@
     <string name="searchNotGoodEnoughSubReasonOther">None of these</string>
 
     <string name="needMoreCustomizationTitleLong">There aren\'t enough ways to customize the app</string>
-    <string name="needMoreCustomizationTitleShort">Customization issues</string>
+    <string name="needMoreCustomizationTitleShort">Customization Issues</string>
     <string name="needMoreCustomizationSubtitle">Which customization option can we add or improve?</string>
     <string name="needMoreCustomizationSubReasonHomeScreenConfiguration">The home screen configuration</string>
     <string name="needMoreCustomizationSubReasonTabDisplay">How tabs are displayed</string>
@@ -53,7 +53,7 @@
     <string name="needMoreCustomizationSubReasonOther">None of these</string>
 
     <string name="appIsSlowOrBuggyTitleLong">The app is slow, buggy, or crashes</string>
-    <string name="appIsSlowOrBuggyTitleShort">Performance issues</string>
+    <string name="appIsSlowOrBuggyTitleShort">Performance Issues</string>
     <string name="appIsSlowOrBuggySubtitle">Which issue are you experiencing?</string>
     <string name="appIsSlowOrBuggySubReasonSlowResults">Web pages or search results load slowly</string>
     <string name="appIsSlowOrBuggySubReasonAppCrashesOrFreezes">The app crashes or freezes</string>
@@ -61,7 +61,7 @@
     <string name="appIsSlowOrBuggySubReasonOther">None of these</string>
 
     <string name="otherMainReasonTitleLong">None of these</string>
-    <string name="otherMainReasonTitleShort">Other issues</string>
+    <string name="otherMainReasonTitleShort">Other Issues</string>
     <string name="otherMainReasonSubtitle">@string/tellUsHowToImprove</string>
 
     <string name="openEndedInputHint">How can we improve? (Optional)</string>
@@ -69,15 +69,15 @@
     <string name="appreciateYourFeedback">We appreciate your feedback</string>
     <string name="anonymousFeedbackIsImportant">Your anonymous feedback is important to us</string>
 
-    <string name="tellUsHowToImprove">Please tell us what we can improve</string>
+    <string name="tellUsHowToImprove">Please tell us what we can improve.</string>
     <string name="thanksForTheFeedback">Thanks for the feedback!</string>
     <string name="feedbackNegativeMainReasonPageSubtitle">What is your frustration most related to?</string>
-    <string name="feedbackNegativeMainReasonPageTitle">We\'re sorry to hear that</string>
+    <string name="feedbackNegativeMainReasonPageTitle">We\'re sorry to hear that.</string>
     <string name="feedbackShareDetails">Share details</string>
     <string name="sharePositiveFeedbackWithTheTeam">Are there any details you\'d like to share with the team?</string>
     <string name="whatHaveYouBeenEnjoying">What have you been enjoying?</string>
     <string name="awesomeToHear">Awesome to hear!</string>
-    <string name="shareTheLoveWithARating">Please share the love by rating on the Play Store</string>
+    <string name="shareTheLoveWithARating">Please share the love by rating on the Play Store.</string>
     <string name="rateTheApp">RATE THE APP</string>
     <string name="declineFurtherFeedback">NO THANKS, I\'M DONE</string>
     <string name="whichBrokenSites">Where are you seeing these issues?</string>
@@ -87,7 +87,7 @@
     <string name="feedbackInitialDisambiguationSubtitle">How would you categorize your feedback?</string>
     <string name="feedbackInitialDisambiguationHappyButtonContentDescription">Positive feedback button</string>
     <string name="feedbackInitialDisambiguationSadButtonContentDescription">Negative feedback button</string>
-    <string name="feedbackIsImportantToUs">Your anonymous feedback is important to us</string>
+    <string name="feedbackIsImportantToUs">Your anonymous feedback is important to us.</string>
 
 
 </resources>
