--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -273,7 +273,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">12dp</item>
         <item name="android:textAlignment">center</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">?attr/normalTextColor</item>
         <item name="android:layout_marginStart">10dp</item>
@@ -286,7 +286,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">12dp</item>
         <item name="android:textAlignment">center</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">?attr/normalTextColor</item>
         <item name="android:textSize">15sp</item>
@@ -296,15 +295,11 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/feedbackTitleMarginTop</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textStyle">bold</item>
         <item name="android:textColor">?attr/normalTextColor</item>
-        <item name="android:textSize">20sp</item>
     </style>
 
     <style name="FeedbackTitle.FeedbackSubtitle.FeedbackHappySadDisambiguationSubtitle">
         <item name="android:textStyle">normal</item>
-        <item name="android:textSize">15sp</item>
         <item name="android:layout_marginTop">9dp</item>
         <item name="android:layout_marginStart">10dp</item>
         <item name="android:layout_marginEnd">10dp</item>
