--- a/app/src/main/res/layout/content_feedback_negative_disambiguation_main_reason.xml
+++ b/app/src/main/res/layout/content_feedback_negative_disambiguation_main_reason.xml
@@ -20,6 +20,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout style="@style/FeedbackFragmentStyle">
@@ -55,10 +56,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_marginTop="34dp"
+            android:layout_marginTop="@dimen/feedbackTitleMarginTop"
             android:clipToPadding="false"
+            tools:itemCount="6"
+            tools:listitem="@layout/item_feedback_reason"
             app:layout_constraintTop_toBottomOf="@id/subtitle"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:paddingBottom="2dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
