--- a/app/src/main/res/layout/content_feedback_open_ended_feedback.xml
+++ b/app/src/main/res/layout/content_feedback_open_ended_feedback.xml
@@ -32,7 +32,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="@dimen/feedbackTitleMarginTop"
             android:importantForAccessibility="no"
-            android:src="@drawable/ic_negative_feedback"
+            tools:src="@drawable/ic_sad_face"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
