--- a/app/src/main/res/layout/content_feedback_negative_disambiguation_main_reason.xml
+++ b/app/src/main/res/layout/content_feedback_negative_disambiguation_main_reason.xml
@@ -31,7 +31,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="@dimen/feedbackTitleMarginTop"
             android:importantForAccessibility="no"
-            android:src="@drawable/ic_negative_feedback"
+            android:src="@drawable/ic_sad_face"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
