--- a/app/src/main/res/drawable/ic_icon_report_broken_site.xml
+++ b/app/src/main/res/drawable/ic_icon_report_broken_site.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2018 DuckDuckGo
+  ~ Copyright (c) 2019 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,12 +15,12 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="26dp"
-    android:height="26dp"
-    android:viewportWidth="26"
-    android:viewportHeight="26">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="32"
+    android:viewportHeight="32">
     <path
-        android:fillColor="#C1E4FF"
+        android:fillColor="#C8D6FF"
         android:fillType="evenOdd"
-        android:pathData="M19.392,14.26l-6.285,6.286L6.82,14.26c-1.258,-1.212 -1.797,-3.726 -0.898,-5.387 0.493,-0.898 3.411,-3.906 7.183,0.449 3.59,-4.355 6.688,-1.347 7.183,-0.45 0.898,1.663 0.359,4.176 -0.897,5.388M13.051,0C5.898,0 0.1,5.798 0.1,12.95c0,2.625 0.782,5.065 2.124,7.107L0,25.902l5.474,-2.45a12.897,12.897 0,0 0,7.576 2.45C20.2,25.902 26,20.103 26,12.95 26.001,5.798 20.203,0 13.05,0" />
+        android:pathData="M16.05,3C23.204,3 29.002,8.798 29,15.95c0,7.153 -5.8,12.952 -12.95,12.952 -2.83,0 -5.445,-0.912 -7.576,-2.45L3,28.901l2.225,-5.845A12.893,12.893 0,0 1,3.1 15.95C3.1,8.798 8.898,3 16.05,3zM16,9a1.79,1.79 0,0 0,-1.78 1.988l0.67,6.018a1.117,1.117 0,0 0,2.22 0l0.67,-6.018A1.79,1.79 0,0 0,16 9zM16,23a2,2 0,1 0,0 -4,2 2,0 0,0 0,4z" />
 </vector>
