Provide a fix to the issue of HTML 5 video not playing. #473
Add setting to allow a user to disable the need for a gesture to play media.
Apply the setting whenever the tab fragment is resumed.

--- a/app/src/main/res/layout/content_settings_general.xml
+++ b/app/src/main/res/layout/content_settings_general.xml
@@ -55,5 +55,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/autocompleteToggle" />
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/setPlayMediaRequireGesture"
+        style="@style/SettingsSwitch"
+        android:text="@string/settingsPlayMediaRequiresGesture"
+        android:theme="@style/SettingsSwitchTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/setAsDefaultBrowserSetting" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
