--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -17,4 +17,5 @@
 
 <resources>
     <dimen name="feedbackTitleMarginTop">20dp</dimen>
+    <dimen name="onboardingTitleMarginTop">8dp</dimen>
 </resources>
