--- a/app/src/main/res/layout/content_onboarding_unified_browsing_protection.xml
+++ b/app/src/main/res/layout/content_onboarding_unified_browsing_protection.xml
@@ -20,24 +20,24 @@
     tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/browsingProtectionGroup"
+        android:id="@+id/privateSearchGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         style="@style/OnboardingListItem"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/browsingProtectionIcon"
         app:layout_constraintTop_toTopOf="parent"
         tools:background="#67F">
 
         <TextView
-            android:id="@+id/browsingProtectionTitle"
+            android:id="@+id/privateSearchTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif"
             android:lineSpacingExtra="3sp"
-            android:text="@string/unifiedOnboardingBrowsingProtectionTitle"
+            android:text="@string/unifiedOnboardingPrivateSearchTitle"
             android:textColor="@color/almostBlack"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -45,16 +45,17 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/browsingProtectionSubtitle"
+            android:id="@+id/privateSearchSubtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:fontFamily="sans-serif"
-            android:text="@string/unifiedOnboardingBrowsingProtectionSubtitle"
+            android:text="@string/unifiedOnboardingPrivateSearchSubtitle"
             android:textColor="@color/brownishGrayTwo"
             android:textSize="15sp"
             android:textStyle="normal"
-            app:layout_constraintStart_toStartOf="@id/browsingProtectionTitle"
-            app:layout_constraintTop_toBottomOf="@id/browsingProtectionTitle" />
+            app:layout_constraintStart_toStartOf="@id/privateSearchTitle"
+            app:layout_constraintTop_toBottomOf="@id/privateSearchTitle" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
