--- a/app/src/main/res/layout/content_onboarding_unified_customization.xml
+++ b/app/src/main/res/layout/content_onboarding_unified_customization.xml
@@ -24,8 +24,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         style="@style/OnboardingListItem"
-        app:layout_constraintEnd_toEndOf="@id/browsingProtectionGroup"
-        app:layout_constraintStart_toStartOf="@id/browsingProtectionGroup"
+        app:layout_constraintEnd_toEndOf="@id/privateSearchGroup"
+        app:layout_constraintStart_toStartOf="@id/privateSearchGroup"
         app:layout_constraintTop_toBottomOf="@id/dataClearingGroup"
         tools:background="#5D7">
 
